--- a/portfolio.html
+++ b/portfolio.html
@@ -6,8 +6,71 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolio</title>
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <header>
+        <img src="./images/WebStudio.jpg" alt="logo">
+        <nav>
+        <ul class="navig">
+            <li><a href="#studia">Студія</a></li>
+            <li><a href="#portfolio">Портфоліо</a> </li>
+            <li><a href="#contacts">Контакти</li></a>
+        </ul>
+    </nav>
+    <ul class="links">
+<li><a class="mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+<li><a class="tel" href="tel:+380961111111"> +380961111111</a></li>
+</ul>
+    </header>
+    <main>
+        <ul class="buttons">
+            <li><a href="#">Усі</a></li>
+            <li><a href="#">Веб-сайти</a></li>
+            <li><a href="#">Додатки</a></li>
+            <li><a href="#">Дизайн</a></li>
+            <li><a href="#">Маркетинг</a></li>
+        </ul>
+        <ul class="projects">
+<li><img src="./images/technokryak.jpg" alt="laptop">
+<h3>Технокряк</h3>
+<p>Веб-сайт</p></li>
+<li><img src="./images/New Orlean.jpg" alt="poster">
+    <h3>Постер New Orlean vs Golden Star</h3>
+    <p>Дизайн</p></li>
+<li><img src="./images/Seafood.jpg" alt="logo">
+    <h3>Ресторан Seafood</h3>
+    <p>Додаток</p></li>
+<li><img src="./images/Prime.jpg" alt="headphones">
+    <h3>Проєкт Prime</h3>
+    <p>Маркетинг</p></li>
+<li><img src="./images/Boxes.jpg" alt="2 boxes">
+    <h3>Проєкт Boxes</h3>
+    <p>Додаток</p></li>
+<li><img src="./images/Inspiration .jpg" alt="Monitor">
+    <h3>Inspiration has no Borders</h3>
+    <p>Веб-сайт</p></li>
+<li><img src="./images/Limited Edition .jpg" alt="book">
+    <h3>Видання Limited Edition</h3>
+    <p>Дизайн</p></li>
+<li><img src="./images/LAB.jpg" alt="Label">
+    <h3>Проєкт LAB</h3>
+    <p>Маркетинг</p></li>
+<li><img src="./images/Growling Business .jpg" alt="Laptop and hands">
+    <h3>Growing Business</h3>
+    <p>Додаток</p>
+</li>
+        </ul>
+    </main>
+    <footer id="contacts">
+        <img class="logotip" src="./images/WebStudio.jpg" alt="LOGO">
+        <address>
+    <a href="https://goo.gl/maps/Sa98YP2Fbu2cbSot6"><h4>м. Київ, пр-т Лесі Українки, 26</h4></a>
+    <a href="mailto:someone@yoursite.com">info@devstudio.com</a>
+    <a href="tel:+380961111111">+38 096 111 11 11</a>
+        </address>
+    </footer>
 </body>
 </html>
