--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <img src="./images/WebStudio.jpg" alt="logo">
+        <h3 class="logo-webstudio"><span>Web</span>Studio</h3>
         <nav>
         <ul class="navig">
             <li><a href="#studia">Студія</a></li>
@@ -65,7 +65,7 @@
         </ul>
     </main>
     <footer id="contacts">
-        <img class="logotip" src="./images/WebStudio.jpg" alt="LOGO">
+        <h3 class="logo-webstudio-2"><span>Web</span>Studio</h3>
         <address>
     <a href="https://goo.gl/maps/Sa98YP2Fbu2cbSot6"><h4>м. Київ, пр-т Лесі Українки, 26</h4></a>
     <a href="mailto:someone@yoursite.com">info@devstudio.com</a>
