--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <h3 class="logo-webstudio"><span>Web</span>Studio</h3>
         <nav>
         <ul class="navig">
-            <li><a href="#studia">Студія</a></li>
-            <li><a href="#portfolio">Портфоліо</a> </li>
+            <li><a href="./index.html">Студія</a></li>
+            <li><a href="./portfolio.html">Портфоліо</a> </li>
             <li><a href="#contacts">Контакти</li></a>
         </ul>
     </nav>
@@ -34,7 +34,7 @@
 </section>
 <section class="cont-about">
         <ul class="soft">
-   <li><h3 id="portfolio">Увага до деталей</h3>
+   <li><h3>Увага до деталей</h3>
         <p>Ідейні міркування, і навіть початок<br>повсякденної роботи з формування<br> позиції.</p></li>
     <li><h3>Пунктуальність</h3>
         <p>Завдання організації, особливо рамки<br>і місце навчання кадрів тягне у себе.</p></li>
@@ -52,7 +52,7 @@
     </ul>
 </section>
 </section>
-<section class="comand" id="studia">
+<section class="comand">
     <h2>Наша команда</h2>
     <ul class="photo-comand">
        <li><img class="cardt" src="./images/team card 1.jpg" alt="ФОТО СОТРУДНИКА">
