--- a/portfolio.html
+++ b/portfolio.html
@@ -18,9 +18,9 @@
         <h3 class="logo-webstudio"><span>Web</span>Studio</h3>
         <nav>
         <ul class="navig">
-            <li><a href="#studia">Студія</a></li>
-            <li><a href="#portfolio">Портфоліо</a> </li>
-            <li><a href="#contacts">Контакти</li></a>
+            <li><a href="./index.html">Студія</a></li>
+            <li><a href="./portfolio.html">Портфоліо</a> </li>
+            <li><a href="./index.html#contacts">Контакти</li></a>
         </ul>
     </nav>
     <ul class="links">
@@ -28,7 +28,7 @@
 <li><a class="tel" href="tel:+380961111111"> +380961111111</a></li>
 </ul>
     </header>
-    <main>
+    <main id="Services">
         <ul class="buttons">
             <li><a href="#">Усі</a></li>
             <li><a href="#">Веб-сайти</a></li>
@@ -67,7 +67,7 @@
 </li>
         </ul>
     </main>
-    <footer id="contacts">
+    <footer>
         <h3 class="logo-webstudio-2"><span>Web</span>Studio</h3>
         <address>
     <a href="https://goo.gl/maps/Sa98YP2Fbu2cbSot6"><h4>м. Київ, пр-т Лесі Українки, 26</h4></a>
