--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <h3 class="logo-webstudio"><span>Web</span>Studio</h3>
+        <a href="" class="logo-webstudio"><span>Web</span>Studio</a>
         <nav>
         <ul class="navig">
             <li><a href="./index.html">Студія</a></li>
@@ -28,47 +28,47 @@
 <li><a class="tel" href="tel:+380961111111"> +380961111111</a></li>
 </ul>
     </header>
-    <main id="Services">
+    <section class="services" id="Services">
         <ul class="buttons">
-            <li><a href="#">Усі</a></li>
-            <li><a href="#">Веб-сайти</a></li>
-            <li><a href="#">Додатки</a></li>
-            <li><a href="#">Дизайн</a></li>
-            <li><a href="#">Маркетинг</a></li>
+            <li><a class="sorting" href="#">Усі</a></li>
+            <li><a class="sorting" href="#">Веб-сайти</a></li>
+            <li><a class="sorting" href="#">Додатки</a></li>
+            <li><a class="sorting" href="#">Дизайн</a></li>
+            <li><a class="sorting" href="#">Маркетинг</a></li>
         </ul>
         <ul class="projects">
 <li><img src="./images/technokryak.jpg" alt="laptop">
-<h3>Технокряк</h3>
-<p>Веб-сайт</p></li>
+<h2 class="name">Технокряк</h2>
+<p class="description">Веб-сайт</p></li>
 <li><img src="./images/New Orlean.jpg" alt="poster">
-    <h3>Постер New Orlean vs Golden Star</h3>
-    <p>Дизайн</p></li>
+    <h2 class="name">Постер New Orlean vs Golden Star</h2>
+    <p class="description">Дизайн</p></li>
 <li><img src="./images/Seafood.jpg" alt="logo">
-    <h3>Ресторан Seafood</h3>
-    <p>Додаток</p></li>
+    <h2 class="name">Ресторан Seafood</h2>
+    <p class="description">Додаток</p></li>
 <li><img src="./images/Prime.jpg" alt="headphones">
-    <h3>Проєкт Prime</h3>
-    <p>Маркетинг</p></li>
+    <h2 class="name">Проєкт Prime</h2>
+    <p class="description">Маркетинг</p></li>
 <li><img src="./images/Boxes.jpg" alt="2 boxes">
-    <h3>Проєкт Boxes</h3>
-    <p>Додаток</p></li>
+    <h2 class="name">Проєкт Boxes</h2>
+    <p class="description">Додаток</p></li>
 <li><img src="./images/Inspiration .jpg" alt="Monitor">
-    <h3>Inspiration has no Borders</h3>
-    <p>Веб-сайт</p></li>
+    <h2 class="name">Inspiration has no Borders</h2>
+    <p class="description">Веб-сайт</p></li>
 <li><img src="./images/Limited Edition .jpg" alt="book">
-    <h3>Видання Limited Edition</h3>
-    <p>Дизайн</p></li>
+    <h2 class="name">Видання Limited Edition</h2>
+    <p class="description">Дизайн</p></li>
 <li><img src="./images/LAB.jpg" alt="Label">
-    <h3>Проєкт LAB</h3>
-    <p>Маркетинг</p></li>
+    <h2 class="name">Проєкт LAB</h2>
+    <p class="description">Маркетинг</p></li>
 <li><img src="./images/Growling Business .jpg" alt="Laptop and hands">
-    <h3>Growing Business</h3>
-    <p>Додаток</p>
+    <h2 class="name">Growing Business</h2>
+    <p class="description">Додаток</p>
 </li>
         </ul>
-    </main>
+    </section>
     <footer>
-        <h3 class="logo-webstudio-2"><span>Web</span>Studio</h3>
+        <a href="" class="logo-webstudio-2"><span>Web</span>Studio</a>
         <address>
     <a href="https://goo.gl/maps/Sa98YP2Fbu2cbSot6"><h4>м. Київ, пр-т Лесі Українки, 26</h4></a>
     <a href="mailto:someone@yoursite.com">info@devstudio.com</a>
