--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 </head>
 <body>
     <header>
-    <h3 class="logo-webstudio"><span>Web</span>Studio</h3>
+    <a href="" class="logo-webstudio"><span>Web</span>Studio</a>
         <nav>
         <ul class="navig">
             <li><a href="./index.html">Студія</a></li>
-            <li><a href="./portfolio.html">Портфоліо</a> </li>
-            <li><a href="#contacts">Контакти</li></a>
+            <li><a href="./portfolio.html">Портфоліо</a></li>
+            <li><a href="#contacts">Контакти</a></li>
         </ul>
     </nav>
     <ul class="links">
@@ -71,7 +71,7 @@
     </ul>
 </section>
 <footer id="contacts">
-    <h3 class="logo-webstudio-2"><span>Web</span>Studio</h3>
+    <a href="" class="logo-webstudio-2"><span>Web</span>Studio</a>
     <address>
 <a href="https://goo.gl/maps/Sa98YP2Fbu2cbSot6"><h4>м. Київ, пр-т Лесі Українки, 26</h4></a>
 <a href="mailto:someone@yoursite.com">info@devstudio.com</a>
