--- a/index.html
+++ b/index.html
@@ -8,24 +8,23 @@
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <header class="header">
     <a href="" class="logo-webstudio"><span>Web</span>Studio</a>
         <nav>
         <ul class="navig">
-            <li><a href="./index.html">Студія</a></li>
-            <li><a href="./portfolio.html">Портфоліо</a></li>
-            <li><a href="#contacts">Контакти</a></li>
+            <li><a class="head-li" href="./index.html">Студія</a></li>
+            <li><a class="head-li" href="./portfolio.html">Портфоліо</a></li>
+            <li><a class="head-li" href="#contacts">Контакти</a></li>
         </ul>
     </nav>
     <ul class="links">
-<li><a class="mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-<li><a class="tel" href="tel:+380961111111"> +380961111111</a></li>
+<li><a class="mail head-li"" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+<li><a class="tel head-li"" href="tel:+380961111111"> +380961111111</a></li>
 </ul>
     </header>
 <section class="main-button">
@@ -70,13 +69,15 @@
 <p>UI Designer</p></li>
     </ul>
 </section>
-<footer id="contacts">
+<footer class="footer" id="contacts">
     <a href="" class="logo-webstudio-2"><span>Web</span>Studio</a>
-    <address>
-<a href="https://goo.gl/maps/Sa98YP2Fbu2cbSot6"><h4>м. Київ, пр-т Лесі Українки, 26</h4></a>
-<a href="mailto:someone@yoursite.com">info@devstudio.com</a>
-<a href="tel:+380961111111">+38 096 111 11 11</a>
-    </address>
+    <address class="address">
+        <ul>
+<li class="infor"><a class="street" href="https://goo.gl/maps/Sa98YP2Fbu2cbSot6">м. Київ, пр-т Лесі Українки, 26</a></li>
+<li class="infor"><a href="mailto:someone@yoursite.com">info@devstudio.com</a></li>
+<li class="infor"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+</ul>
+</address>
 </footer>
 </body>
 </html>
