--- a/portfolio.html
+++ b/portfolio.html
@@ -8,33 +8,31 @@
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <header class="header">
         <a href="" class="logo-webstudio"><span>Web</span>Studio</a>
         <nav>
         <ul class="navig">
-            <li><a href="./index.html">Студія</a></li>
-            <li><a href="./portfolio.html">Портфоліо</a> </li>
-            <li><a href="./index.html#contacts">Контакти</li></a>
+            <li><a class="head-li" href="./index.html">Студія</a></li>
+            <li><a class="head-li" href="./portfolio.html">Портфоліо</a></li>
+            <li><a class="head-li" href="./index.html#contacts">Контакти</a></li>
         </ul>
     </nav>
     <ul class="links">
-<li><a class="mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-<li><a class="tel" href="tel:+380961111111"> +380961111111</a></li>
+<li><a class="mail head-li" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+<li><a class="tel head-li" href="tel:+380961111111"> +380961111111</a></li>
 </ul>
     </header>
-    <section class="services" id="Services">
+    <main class="main">
         <ul class="buttons">
-            <li><a class="sorting" href="#">Усі</a></li>
-            <li><a class="sorting" href="#">Веб-сайти</a></li>
-            <li><a class="sorting" href="#">Додатки</a></li>
-            <li><a class="sorting" href="#">Дизайн</a></li>
-            <li><a class="sorting" href="#">Маркетинг</a></li>
+            <li><button type="button" class="sorting-button" >Усі</button></li>
+            <li><button type="button" class="sorting-button">Веб-сайти</button></li>
+            <li><button type="button" class="sorting-button">Додатки</button></li>
+            <li><button type="button" class="sorting-button">Дизайн</button></li>
+            <li><button type="button" class="sorting-button">Маркетинг</button></li>
         </ul>
         <ul class="projects">
 <li><img src="./images/technokryak.jpg" alt="laptop">
@@ -66,14 +64,16 @@
     <p class="description">Додаток</p>
 </li>
         </ul>
-    </section>
-    <footer>
+    </main>
+    <footer class="footer" id="contacts">
         <a href="" class="logo-webstudio-2"><span>Web</span>Studio</a>
-        <address>
-    <a href="https://goo.gl/maps/Sa98YP2Fbu2cbSot6"><h4>м. Київ, пр-т Лесі Українки, 26</h4></a>
-    <a href="mailto:someone@yoursite.com">info@devstudio.com</a>
-    <a href="tel:+380961111111">+38 096 111 11 11</a>
-        </address>
+        <address class="address">
+            <ul>
+    <li class="infor"><a class="street" href="https://goo.gl/maps/Sa98YP2Fbu2cbSot6">м. Київ, пр-т Лесі Українки, 26</a></li>
+    <li class="infor"><a href="mailto:someone@yoursite.com">info@devstudio.com</a></li>
+    <li class="infor"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+    </ul>
+    </address>
     </footer>
 </body>
 </html>
