--- a/portfolio.html
+++ b/portfolio.html
@@ -10,9 +10,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header class="header">
+        <div class="container">
         <a href="" class="logo-webstudio"><span>Web</span>Studio</a>
         <nav>
         <ul class="navig">
@@ -25,8 +27,10 @@
 <li><a class="mail head-li" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
 <li><a class="tel head-li" href="tel:+380961111111"> +380961111111</a></li>
 </ul>
+</div>
     </header>
     <main class="main">
+        <div class="container-projects">
         <ul class="buttons">
             <li><button type="button" class="sorting-button" >Усі</button></li>
             <li><button type="button" class="sorting-button">Веб-сайти</button></li>
@@ -64,16 +68,19 @@
     <p class="description">Додаток</p>
 </li>
         </ul>
+    </div>
     </main>
     <footer class="footer" id="contacts">
+        <div class="container-footer">
         <a href="" class="logo-webstudio-2"><span>Web</span>Studio</a>
         <address class="address">
-            <ul>
+            <ul class="list-address">
     <li class="infor"><a class="street" href="https://goo.gl/maps/Sa98YP2Fbu2cbSot6">м. Київ, пр-т Лесі Українки, 26</a></li>
     <li class="infor"><a href="mailto:someone@yoursite.com">info@devstudio.com</a></li>
     <li class="infor"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
     </ul>
     </address>
+</div>
     </footer>
 </body>
 </html>
