--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header class="header">
-    <a href="" class="logo-webstudio"><span>Web</span>Studio</a>
+        <div class="container">
+        <a href="" class="logo-webstudio"><span>Web</span>Studio</a>
         <nav>
         <ul class="navig">
             <li><a class="head-li" href="./index.html">Студія</a></li>
@@ -23,15 +25,19 @@
         </ul>
     </nav>
     <ul class="links">
-<li><a class="mail head-li"" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-<li><a class="tel head-li"" href="tel:+380961111111"> +380961111111</a></li>
+<li><a class="mail head-li" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+<li><a class="tel head-li" href="tel:+380961111111"> +380961111111</a></li>
 </ul>
+</div>
     </header>
 <section class="main-button">
+    <div class="container-button">
 <h1>Ефективні рішення<br> для вашого бізнесу</h1>
 <button type="button">Замовити послугу</button>
+</div>
 </section>
 <section class="cont-about">
+    <div class="container-we-doing">
         <ul class="soft">
    <li><h3>Увага до деталей</h3>
         <p>Ідейні міркування, і навіть початок<br>повсякденної роботи з формування<br> позиції.</p></li>
@@ -42,16 +48,19 @@
         <li> <h3>Сучасні технології</h3>
         <p>Значимість цих проблем настільки<br>очевидна, що реалізація планових<br>завдань.</p></li>
     </ul>
-<section class="we-doing">
+<div class="we-doing">
     <h2>Чим ми займаємося</h2>
     <ul class="imgtechno">
        <li><img src="./images/box 1.jpg" alt="Робота за клавіатурою"></li> 
        <li><img src="./images/box 2.jpg" alt="Телефон та ноутбук-робота"></li> 
        <li><img src="./images/box 3.jpg" alt="Графічний планшет"></li> 
     </ul>
+</div>
+</div>
 </section>
-</section>
+
 <section class="comand">
+    <div class="container-comand">
     <h2>Наша команда</h2>
     <ul class="photo-comand">
        <li><img class="cardt" src="./images/team card 1.jpg" alt="ФОТО СОТРУДНИКА">
@@ -68,16 +77,19 @@
     <h3>Михайло Єрмаков</h3>
 <p>UI Designer</p></li>
     </ul>
+</div>
 </section>
 <footer class="footer" id="contacts">
+    <div class="container-footer">
     <a href="" class="logo-webstudio-2"><span>Web</span>Studio</a>
     <address class="address">
-        <ul>
+        <ul class="list-address">
 <li class="infor"><a class="street" href="https://goo.gl/maps/Sa98YP2Fbu2cbSot6">м. Київ, пр-т Лесі Українки, 26</a></li>
 <li class="infor"><a href="mailto:someone@yoursite.com">info@devstudio.com</a></li>
 <li class="infor"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
 </ul>
 </address>
+</div>
 </footer>
 </body>
 </html>
