--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </header>
 <section class="main-button">
     <div class="container-button">
-<h1>Ефективні рішення<br> для вашого бізнесу</h1>
+<h1>Ефективні рішення для<br>вашого бізнесу</h1>
 <button type="button">Замовити послугу</button>
 </div>
 </section>
