--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header">
         <div class="container">
         <a href="" class="logo-webstudio"><span>Web</span>Studio</a>
-        <nav>
+        <nav class="nav">
         <ul class="navig">
             <li><a class="head-li" href="./index.html">Студія</a></li>
             <li><a class="head-li" href="./portfolio.html">Портфоліо</a></li>
@@ -36,18 +36,22 @@
 <button type="button">Замовити послугу</button>
 </div>
 </section>
-<section class="cont-about">
+<section class="cont-about not-botpadding">
     <div class="container-we-doing">
         <ul class="soft">
-   <li><h3>Увага до деталей</h3>
+   <li class="about-soft-li"><h3>Увага до деталей</h3>
         <p>Ідейні міркування, і навіть початок<br>повсякденної роботи з формування<br> позиції.</p></li>
-    <li><h3>Пунктуальність</h3>
+    <li class="about-soft-li"><h3>Пунктуальність</h3>
         <p>Завдання організації, особливо рамки<br>і місце навчання кадрів тягне у себе.</p></li>
-        <li><h3>Планування</h3>
+        <li class="about-soft-li"><h3>Планування</h3>
         <p>Так само консультація з широким<br>активом значною мірою зумовлює.</p></li>
-        <li> <h3>Сучасні технології</h3>
+        <li class="about-soft-li"> <h3>Сучасні технології</h3>
         <p>Значимість цих проблем настільки<br>очевидна, що реалізація планових<br>завдань.</p></li>
     </ul>
+</div>
+</section>
+<section  class="individual-non-toppadding">
+    <div class="container-we-doing">
 <div class="we-doing">
     <h2>Чим ми займаємося</h2>
     <ul class="imgtechno">
@@ -55,7 +59,7 @@
        <li><img src="./images/box 2.jpg" alt="Телефон та ноутбук-робота"></li> 
        <li><img src="./images/box 3.jpg" alt="Графічний планшет"></li> 
     </ul>
-</div>
+    </div>
 </div>
 </section>
 
@@ -84,9 +88,9 @@
     <a href="" class="logo-webstudio-2"><span>Web</span>Studio</a>
     <address class="address">
         <ul class="list-address">
-<li class="infor"><a class="street" href="https://goo.gl/maps/Sa98YP2Fbu2cbSot6">м. Київ, пр-т Лесі Українки, 26</a></li>
-<li class="infor"><a href="mailto:someone@yoursite.com">info@devstudio.com</a></li>
-<li class="infor"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+<li class="infor"><a class="street map-ua" href="https://goo.gl/maps/Sa98YP2Fbu2cbSot6">м. Київ, пр-т Лесі Українки, 26</a></li>
+<li class="infor"><a class="street" href="mailto:someone@yoursite.com">info@devstudio.com</a></li>
+<li class="infor"><a class="street" href="tel:+380961111111">+38 096 111 11 11</a></li>
 </ul>
 </address>
 </div>
