--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
     <header class="header">
         <div class="container">
         <a href="" class="logo-webstudio"><span>Web</span>Studio</a>
-        <nav>
+        <nav class="nav">
         <ul class="navig">
             <li><a class="head-li" href="./index.html">Студія</a></li>
             <li><a class="head-li" href="./portfolio.html">Портфоліо</a></li>
@@ -75,9 +75,9 @@
         <a href="" class="logo-webstudio-2"><span>Web</span>Studio</a>
         <address class="address">
             <ul class="list-address">
-    <li class="infor"><a class="street" href="https://goo.gl/maps/Sa98YP2Fbu2cbSot6">м. Київ, пр-т Лесі Українки, 26</a></li>
-    <li class="infor"><a href="mailto:someone@yoursite.com">info@devstudio.com</a></li>
-    <li class="infor"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+    <li class="infor"><a class="street map-ua" href="https://goo.gl/maps/Sa98YP2Fbu2cbSot6">м. Київ, пр-т Лесі Українки, 26</a></li>
+    <li class="infor"><a class="street" href="mailto:someone@yoursite.com">info@devstudio.com</a></li>
+    <li class="infor"><a class="street" href="tel:+380961111111">+38 096 111 11 11</a></li>
     </ul>
     </address>
 </div>
