--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
 </head>
 <body>
     <header class="header">
-        <div class="container">
+        <div class="container-header">
         <a href="" class="logo-webstudio"><span>Web</span>Studio</a>
         <nav class="nav">
         <ul class="navig">
-            <li><a class="head-li" href="./index.html">Студія</a></li>
-            <li><a class="head-li" href="./portfolio.html">Портфоліо</a></li>
-            <li><a class="head-li" href="#contacts">Контакти</a></li>
+            <li><a class="head-li links-hf" href="./index.html">Студія</a></li>
+            <li><a class="head-li links-hf" href="./portfolio.html">Портфоліо</a></li>
+            <li><a class="head-li links-hf" href="#contacts">Контакти</a></li>
         </ul>
     </nav>
     <ul class="links">
-<li><a class="mail head-li" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-<li><a class="tel head-li" href="tel:+380961111111"> +380961111111</a></li>
+<li><a class="mail links-hf" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+<li><a class="tel links-hf" href="tel:+380961111111"> +380961111111</a></li>
 </ul>
 </div>
     </header>
@@ -36,7 +36,7 @@
 <button type="button">Замовити послугу</button>
 </div>
 </section>
-<section class="cont-about not-botpadding">
+<section class="cont-about">
     <div class="container-we-doing">
         <ul class="soft">
    <li class="about-soft-li"><h3>Увага до деталей</h3>
@@ -50,7 +50,7 @@
     </ul>
 </div>
 </section>
-<section  class="individual-non-toppadding">
+<section>
     <div class="container-we-doing">
 <div class="we-doing">
     <h2>Чим ми займаємося</h2>
@@ -68,18 +68,18 @@
     <h2>Наша команда</h2>
     <ul class="photo-comand">
        <li><img class="cardt" src="./images/team card 1.jpg" alt="ФОТО СОТРУДНИКА">
-    <h3>Ігор Дем'яненко</h3>
-    <p>Product Designer</p>
+    <div class="harakter"><h3>Ігор Дем'яненко</h3>
+    <p>Product Designer</p></div>
     </li> 
        <li><img class="cardt" src="./images/team card 2.jpg" alt="ФОТО СОТРУДНИКА">
-    <h3>Ольга Рєпіна</h3>
-<p>Frontend Developer</p></li> 
+        <div class="harakter"><h3>Ольга Рєпіна</h3>
+<p>Frontend Developer</p></div></li>
        <li><img class="cardt" src="./images/team card 3.jpg" alt="ФОТО СОТРУДНИКА">
-    <h3>Микола Тарасов</h3>
-<p>Marketing</p></li> 
+        <div class="harakter"><h3>Микола Тарасов</h3>
+<p>Marketing</p></div></li> 
        <li><img class="cardt" src="./images/team card 4.jpg" alt="ФОТО СОТРУДНИКА">
-    <h3>Михайло Єрмаков</h3>
-<p>UI Designer</p></li>
+        <div class="harakter"><h3>Михайло Єрмаков</h3>
+<p>UI Designer</p></div></li>
     </ul>
 </div>
 </section>
@@ -88,9 +88,9 @@
     <a href="" class="logo-webstudio-2"><span>Web</span>Studio</a>
     <address class="address">
         <ul class="list-address">
-<li class="infor"><a class="street map-ua" href="https://goo.gl/maps/Sa98YP2Fbu2cbSot6">м. Київ, пр-т Лесі Українки, 26</a></li>
-<li class="infor"><a class="street" href="mailto:someone@yoursite.com">info@devstudio.com</a></li>
-<li class="infor"><a class="street" href="tel:+380961111111">+38 096 111 11 11</a></li>
+<li class="infor"><a class="street map-ua links-hf" href="https://goo.gl/maps/Sa98YP2Fbu2cbSot6">м. Київ, пр-т Лесі Українки, 26</a></li>
+<li class="infor"><a class="street links-hf" href="mailto:someone@yoursite.com">info@devstudio.com</a></li>
+<li class="infor"><a class="street links-hf" href="tel:+380961111111">+38 096 111 11 11</a></li>
 </ul>
 </address>
 </div>
