--- a/portfolio.html
+++ b/portfolio.html
@@ -18,54 +18,54 @@
         <a href="" class="logo-webstudio"><span>Web</span>Studio</a>
         <nav class="nav">
         <ul class="navig">
-            <li><a class="head-li" href="./index.html">Студія</a></li>
-            <li><a class="head-li" href="./portfolio.html">Портфоліо</a></li>
-            <li><a class="head-li" href="./index.html#contacts">Контакти</a></li>
+            <li><a class="head-li links-hf" href="./index.html">Студія</a></li>
+            <li><a class="head-li links-hf" href="./portfolio.html">Портфоліо</a></li>
+            <li><a class="head-li links-hf" href="./index.html#contacts">Контакти</a></li>
         </ul>
     </nav>
     <ul class="links">
-<li><a class="mail head-li" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-<li><a class="tel head-li" href="tel:+380961111111"> +380961111111</a></li>
+<li><a class="mail links-hf" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+<li><a class="tel links-hf" href="tel:+380961111111"> +380961111111</a></li>
 </ul>
 </div>
     </header>
     <main class="main">
         <div class="container-projects">
         <ul class="buttons">
-            <li><button type="button" class="sorting-button" >Усі</button></li>
-            <li><button type="button" class="sorting-button">Веб-сайти</button></li>
-            <li><button type="button" class="sorting-button">Додатки</button></li>
-            <li><button type="button" class="sorting-button">Дизайн</button></li>
-            <li><button type="button" class="sorting-button">Маркетинг</button></li>
+            <li><button type="button" class="sorting-button button-hf" >Усі</button></li>
+            <li><button type="button" class="sorting-button button-hf">Веб-сайти</button></li>
+            <li><button type="button" class="sorting-button button-hf">Додатки</button></li>
+            <li><button type="button" class="sorting-button button-hf">Дизайн</button></li>
+            <li><button type="button" class="sorting-button button-hf">Маркетинг</button></li>
         </ul>
         <ul class="projects">
 <li><img src="./images/technokryak.jpg" alt="laptop">
-<h2 class="name">Технокряк</h2>
-<p class="description">Веб-сайт</p></li>
+<div class="direction-img"><h2 class="name">Технокряк</h2>
+<p class="description">Веб-сайт</p></div></li>
 <li><img src="./images/New Orlean.jpg" alt="poster">
-    <h2 class="name">Постер New Orlean vs Golden Star</h2>
-    <p class="description">Дизайн</p></li>
+    <div class="direction-img"><h2 class="name">Постер New Orlean vs Golden Star</h2>
+    <p class="description">Дизайн</p></div></li>
 <li><img src="./images/Seafood.jpg" alt="logo">
-    <h2 class="name">Ресторан Seafood</h2>
-    <p class="description">Додаток</p></li>
+    <div class="direction-img"><h2 class="name">Ресторан Seafood</h2>
+    <p class="description">Додаток</p></div></li>
 <li><img src="./images/Prime.jpg" alt="headphones">
-    <h2 class="name">Проєкт Prime</h2>
-    <p class="description">Маркетинг</p></li>
+    <div class="direction-img"><h2 class="name">Проєкт Prime</h2>
+    <p class="description">Маркетинг</p></div></li>
 <li><img src="./images/Boxes.jpg" alt="2 boxes">
-    <h2 class="name">Проєкт Boxes</h2>
-    <p class="description">Додаток</p></li>
+    <div class="direction-img"><h2 class="name">Проєкт Boxes</h2>
+    <p class="description">Додаток</p></div></li>
 <li><img src="./images/Inspiration .jpg" alt="Monitor">
-    <h2 class="name">Inspiration has no Borders</h2>
-    <p class="description">Веб-сайт</p></li>
+    <div class="direction-img"><h2 class="name">Inspiration has no Borders</h2>
+    <p class="description">Веб-сайт</p></div></li>
 <li><img src="./images/Limited Edition .jpg" alt="book">
-    <h2 class="name">Видання Limited Edition</h2>
-    <p class="description">Дизайн</p></li>
+    <div class="direction-img"><h2 class="name">Видання Limited Edition</h2>
+    <p class="description">Дизайн</p></div></li>
 <li><img src="./images/LAB.jpg" alt="Label">
-    <h2 class="name">Проєкт LAB</h2>
-    <p class="description">Маркетинг</p></li>
+    <div class="direction-img"><h2 class="name">Проєкт LAB</h2>
+    <p class="description">Маркетинг</p></div></li>
 <li><img src="./images/Growling Business .jpg" alt="Laptop and hands">
-    <h2 class="name">Growing Business</h2>
-    <p class="description">Додаток</p>
+    <div class="direction-img"><h2 class="name">Growing Business</h2>
+    <p class="description">Додаток</p></div>
 </li>
         </ul>
     </div>
@@ -75,9 +75,9 @@
         <a href="" class="logo-webstudio-2"><span>Web</span>Studio</a>
         <address class="address">
             <ul class="list-address">
-    <li class="infor"><a class="street map-ua" href="https://goo.gl/maps/Sa98YP2Fbu2cbSot6">м. Київ, пр-т Лесі Українки, 26</a></li>
-    <li class="infor"><a class="street" href="mailto:someone@yoursite.com">info@devstudio.com</a></li>
-    <li class="infor"><a class="street" href="tel:+380961111111">+38 096 111 11 11</a></li>
+    <li class="infor"><a class="street map-ua links-hf" href="https://goo.gl/maps/Sa98YP2Fbu2cbSot6">м. Київ, пр-т Лесі Українки, 26</a></li>
+    <li class="infor"><a class="street links-hf" href="mailto:someone@yoursite.com">info@devstudio.com</a></li>
+    <li class="infor"><a class="street links-hf" href="tel:+380961111111">+38 096 111 11 11</a></li>
     </ul>
     </address>
 </div>
