--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
         <a href="" class="logo-webstudio"><span>Web</span>Studio</a>
         <nav class="nav">
         <ul class="navig">
-            <li><a class="head-li links-hf" href="./index.html">Студія</a></li>
+            <li><a class="head-li links-hf current" href="./index.html">Студія</a></li>
             <li><a class="head-li links-hf" href="./portfolio.html">Портфоліо</a></li>
             <li><a class="head-li links-hf" href="#contacts">Контакти</a></li>
         </ul>
     </nav>
     <ul class="links">
-<li><a class="mail links-hf" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-<li><a class="tel links-hf" href="tel:+380961111111"> +380961111111</a></li>
+<li class="link-child-mail"><a class="mail links-hf" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+<li class="link-child-tel"><a class="tel links-hf" href="tel:+380961111111"> +380961111111</a></li>
 </ul>
 </div>
     </header>
@@ -40,24 +40,24 @@
     <div class="container-we-doing">
         <ul class="soft">
    <li class="about-soft-li"><h3>Увага до деталей</h3>
-        <p>Ідейні міркування, і навіть початок<br>повсякденної роботи з формування<br> позиції.</p></li>
+        <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p></li>
     <li class="about-soft-li"><h3>Пунктуальність</h3>
-        <p>Завдання організації, особливо рамки<br>і місце навчання кадрів тягне у себе.</p></li>
+        <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p></li>
         <li class="about-soft-li"><h3>Планування</h3>
-        <p>Так само консультація з широким<br>активом значною мірою зумовлює.</p></li>
+        <p>Так само консультація з широким активом значною мірою зумовлює.</p></li>
         <li class="about-soft-li"> <h3>Сучасні технології</h3>
-        <p>Значимість цих проблем настільки<br>очевидна, що реалізація планових<br>завдань.</p></li>
+        <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p></li>
     </ul>
 </div>
 </section>
-<section>
+<section class="non-top-padding">
     <div class="container-we-doing">
 <div class="we-doing">
     <h2>Чим ми займаємося</h2>
     <ul class="imgtechno">
-       <li><img src="./images/box 1.jpg" alt="Робота за клавіатурою"></li> 
-       <li><img src="./images/box 2.jpg" alt="Телефон та ноутбук-робота"></li> 
-       <li><img src="./images/box 3.jpg" alt="Графічний планшет"></li> 
+       <li><img class="box-img" src="./images/box 1.jpg" alt="Робота за клавіатурою"></li> 
+       <li><img class="box-img" src="./images/box 2.jpg" alt="Телефон та ноутбук-робота"></li> 
+       <li><img class="box-img" src="./images/box 3.jpg" alt="Графічний планшет"></li> 
     </ul>
     </div>
 </div>
