--- a/portfolio.html
+++ b/portfolio.html
@@ -19,13 +19,13 @@
         <nav class="nav">
         <ul class="navig">
             <li><a class="head-li links-hf" href="./index.html">Студія</a></li>
-            <li><a class="head-li links-hf" href="./portfolio.html">Портфоліо</a></li>
+            <li><a class="head-li links-hf current" href="./portfolio.html">Портфоліо</a></li>
             <li><a class="head-li links-hf" href="./index.html#contacts">Контакти</a></li>
         </ul>
     </nav>
     <ul class="links">
-<li><a class="mail links-hf" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-<li><a class="tel links-hf" href="tel:+380961111111"> +380961111111</a></li>
+<li class="link-child-mail"><a class="mail links-hf" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+<li class="link-child-tel"><a class="tel links-hf" href="tel:+380961111111"> +380961111111</a></li>
 </ul>
 </div>
     </header>
