--- a/index.html
+++ b/index.html
@@ -25,8 +25,16 @@
         </ul>
     </nav>
     <ul class="links">
-<li class="link-child-mail"><a class="mail links-hf" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-<li class="link-child-tel"><a class="tel links-hf" href="tel:+380961111111"> +380961111111</a></li>
+<li class="link-child-mail"><a class="mail links-hf" href="mailto:info@devstudio.com"><svg class="svg-img-header-1" width="16" height="12">
+    <use href="./images/icons.svg#icon-envelope-hover-1"></use>
+</svg>
+info@devstudio.com</a></li>
+<li class="link-child-tel"><a class="tel links-hf" href="tel:+380961111111"> 
+    <svg width="10" height="16" class="svg-img-header" >
+        <use href="./images/icons.svg#icon-smartphone-1"></use>
+    </svg>
+
+    +380961111111</a></li>
 </ul>
 </div>
     </header>
