--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ info@devstudio.com</a></li>
 </ul></div>
 </li>
        <li class="comand-li"><img class="cardt" src="./images/team card 3.jpg" alt="ФОТО СОТРУДНИКА">
-        <div class="harakter"><h3>Микола<br>Тарасов</h3>
+        <div class="harakter"><h3>Микола Тарасов</h3>
 <p>Marketing</p>
 <ul class="links-on-social">
     <li class="contacts-soc-item"><a href="" class="barbers-soc-link">
