--- a/index.html
+++ b/index.html
@@ -330,6 +330,7 @@ info@devstudio.com</a></li>
     </ul>
     </div>
 </div>
+ADAPTATION
 </footer>
 <script src="./JS/modal.js"></script>
 </body>
